// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`write-pages one category, one page with image example should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)

\`\`\`bash
defaults write com.apple.category \\"page\\" -bool \\"true\\" 
\`\`\`
<img
  src=\\"./category-page-true.png\\"
  alt=\\"Example output with value set to true\\"
  width=\\"600\\" height=\\"400\\" style=\\"height: auto\\"
/>

## Set to \`false\`

\`\`\`bash
defaults write com.apple.category \\"page\\" -bool \\"false\\" 
\`\`\`
<img
  src=\\"./category-page-false.png\\"
  alt=\\"Example output with value set to false\\"
  width=\\"400\\" height=\\"200\\" style=\\"height: auto\\"
/>

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page\\"
\`\`\`
"
`;

exports[`write-pages one category, one page with text and possible values example should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string
  * start
  * middle
  * end

## Set to \`start\`

output when value is start

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"start\\" 
\`\`\`

## Set to \`middle\` (default value)

output when value is middle

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"middle\\" 
\`\`\`

## Set to \`end\`

output when value is end

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"end\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page\\"
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with a deleteAlert section should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
::: danger
This an alert message. <br> \`defaults command\`
:::
\`\`\`bash
defaults delete com.apple.category \\"page\\"
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with an after command should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

## Set to \`~/Desktop\` (default value)

output when value is ~/Desktop

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"~/Desktop\\" && killall App
\`\`\`

## Set to \`~/Pictures\`

output when value is ~/Pictures

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"~/Pictures\\" && killall App
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page\\" && killall App
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with requirements should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: string

## Requirements
- [\`com.apple.category2 another-key\`](../../another-category/another-key.html#set-to-true) must be set to \`true\`
- [\`com.apple.category2 a-third-key\`](../../a-third-category/a-third-key.html#set-to-0.5) must be set to \`0.5\`

## Set to \`true\` (default value)

output when value is true

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"true\\" && killall App
\`\`\`

## Set to \`false\`

output when value is false

\`\`\`bash
defaults write com.apple.category \\"page\\" -string \\"false\\" && killall App
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page\\" && killall App
\`\`\`
"
`;

exports[`write-pages one category, one page with text example with special chars key and values should write a category/a-page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"This is a description of the page. It can contain &quot;quotes&quot; and markdown.\\\\n\\\\n- a list item\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"This is a description of the page. It can contain &quot;quotes&quot; and markdown.\\\\n\\\\n- a list item\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

This is a description of the page. It can contain \\"quotes\\" and markdown.

- a list item

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`~/Desktop\` (default value)

output when value is ~/Desktop

\`\`\`bash
defaults write com.apple.category \\"a page\\" -bool \\"~/Desktop\\" 
\`\`\`

## Set to \`~/Pictures\`

output when value is ~/Pictures

\`\`\`bash
defaults write com.apple.category \\"a page\\" -bool \\"~/Pictures\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"a page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"a page\\"
\`\`\`
"
`;

exports[`write-pages one category, one page with video example should write a category/page.md file using the page template 1`] = `
"---
title: Page | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: float

## Set to \`0\` (default value)

\`\`\`bash
defaults write com.apple.category \\"page\\" -float \\"0\\" 
\`\`\`
<video autoplay loop muted playsinline width=\\"750\\" height=\\"400\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"./category-page-0.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0
</video>

## Set to \`0.5\`

\`\`\`bash
defaults write com.apple.category \\"page\\" -float \\"0.5\\" 
\`\`\`
<video autoplay loop muted playsinline width=\\"720\\" height=\\"390\\" style=\\"max-width: 100%; height: auto\\">
  <source src=\\"./category-page-0.5.mp4\\" type=\\"video/mp4\\">
  Example output with value set to 0.5
</video>

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page\\"
\`\`\`
"
`;

exports[`write-pages one category, two pages should write a category/page1.md file using the page template 1`] = `
"---
title: Page 1 | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page 1
  - - meta
    - name: \\"description\\"
      content: \\"Page 1 description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page 1 description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page 1

Page 1 description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)

output when value is true

\`\`\`bash
defaults write com.apple.category \\"page1\\" -bool \\"true\\" 
\`\`\`

## Set to \`false\`

output when value is false

\`\`\`bash
defaults write com.apple.category \\"page1\\" -bool \\"false\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page1\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page1\\"
\`\`\`
"
`;

exports[`write-pages one category, two pages should write a category/page2.md file using the page template 1`] = `
"---
title: Page 2 | Category | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category > Page 2
  - - meta
    - name: \\"description\\"
      content: \\"Page 2 description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page 2 description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page 2

Page 2 description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\`

output when value is true

\`\`\`bash
defaults write com.apple.category \\"page2\\" -bool \\"true\\" 
\`\`\`

## Set to \`false\` (default value)

output when value is false

\`\`\`bash
defaults write com.apple.category \\"page2\\" -bool \\"false\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category \\"page2\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category \\"page2\\"
\`\`\`
"
`;

exports[`write-pages two categories, one page in each should write a category1/page.md file using the page template 1`] = `
"---
title: Page | Category 1 | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category 1 > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\` (default value)

output when value is true

\`\`\`bash
defaults write com.apple.category1 \\"page\\" -bool \\"true\\" 
\`\`\`

## Set to \`false\`

output when value is false

\`\`\`bash
defaults write com.apple.category1 \\"page\\" -bool \\"false\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category1 \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category1 \\"page\\"
\`\`\`
"
`;

exports[`write-pages two categories, one page in each should write a category2/page.md file using the page template 1`] = `
"---
title: Page | Category 2 | macOS defaults
head:
  - - meta
    - property: \\"og:title\\"
      content: macOS defaults > Category 2 > Page
  - - meta
    - name: \\"description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"og:description\\"
      content: \\"Page description.\\"
  - - meta
    - property: \\"twitter:card\\"
      content: \\"summary\\"
  - - meta
    - property: \\"twitter:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.webp\\"
  - - meta
    - property: \\"og:image\\"
      content: \\"https://macos-defaults.netlify.app/media-1x1.jpg\\"
---
# Page

Page description.

<!-- break lists -->

- **Tested on macOS**:
  * Big Sur
- **Parameter type**: bool

## Set to \`true\`

output when value is true

\`\`\`bash
defaults write com.apple.category2 \\"page\\" -bool \\"true\\" 
\`\`\`

## Set to \`false\` (default value)

output when value is false

\`\`\`bash
defaults write com.apple.category2 \\"page\\" -bool \\"false\\" 
\`\`\`

## Read current value
\`\`\`bash
defaults read com.apple.category2 \\"page\\"
\`\`\`

## Reset to default value
\`\`\`bash
defaults delete com.apple.category2 \\"page\\"
\`\`\`
"
`;
